# FerrumCFD

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
applications/: README.md
applications/legacy/: README.md
applications/modules/: README.md
applications/solvers/: README.md
applications/utilities/: README.md
benchmarks/laminar_pipe/: pipeBenchmark
benchmarks/plane_channel/: README.md  planeChannelBenchmark
crates/ferrum-cli/: Cargo.toml
crates/ferrum-cli/src/: case.rs  lib.rs
crates/ferrum-mesh/: Cargo.toml
docs/: architecture.md  build-week-2026.md  security-review-2026-07-09.md  solver-roadmap.md  user-guide.md  versioning.md
docs/benchmarks/: cpu-performance-foundation.md  gmsh-pipe-mesh-study.md  laminar-pipe-poiseuille.md  laminar-plane-channel.md  laminar-simple-residual-control.md
docs/development/: continuous-integration.md  script-policy.md
examples/: README.md
examples/laminar_pipe/: README.md
scripts/: compare_laminar_pipe.ps1  generate_laminar_pipe_case.ps1  prepare_plane_channel_case.ps1  run_gmsh_pipe_import.ps1  run_gmsh_pipe_mesh_study.ps1  run_laminar_pipe_convergence.ps1  run_laminar_simple_benchmark.ps1  run_laminar_simple_iteration_sweep.ps1  run_laminar_simple_matched_time_benchmark.ps1  run_laminar_simple_mesh_study.ps1  run_laminar_simple_pressure_sweep.ps1  run_openfoam_laminar_pipe.ps1  run_openfoam_laminar_pipe_step_sweep.ps1  run_poiseuille_benchmark.ps1
src/: README.md
test/: README.md
tutorials/: README.md
validation/: README.md
(+198 files in other folders)
